package app.model;

public enum Goal
{
    WITCH_HAT,
    KEY,
    RING,
    CHANDELIER,
    TREASURE_MAP,
    CROWN,
    SWORD,
    SPELL_BOOK,
    MAGIC_WAND,
    SHIELD,
    MAGIC_POTION,
    TREASURE_CHEST,
    GHOST,
    DRAGON,
    BAT,
    SPIDER,
    GNOME,
    FAIRY,
    SKELETON,
    GRIFFIN,
    GOBLIN,
    MINOTAUR,
    UNICORN,
    PHOENIX,
    TROLL
}